internal/xds/translator/testdata/out/xds-ir/http-route-session-persistence.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        safeRegex:
          regex: /v1/.*
      name: header-based-session-persistence-route
      route:
        cluster: regex-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.stateful_session:
          '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
          statefulSession:
            sessionState:
              name: envoy.http.stateful_session.header
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState
                name: session-header
    - match:
        safeRegex:
          regex: /v1/.*/hoge
      name: cookie-based-session-persistence-route-regex
      route:
        cluster: regex-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.stateful_session:
          '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
          statefulSession:
            sessionState:
              name: envoy.http.stateful_session.cookie
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                cookie:
                  name: session-header
                  path: /
                  ttl: 3600s
    - match:
        pathSeparatedPrefix: /v2
      name: cookie-based-session-persistence-route-prefix
      route:
        cluster: regex-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.stateful_session:
          '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
          statefulSession:
            sessionState:
              name: envoy.http.stateful_session.cookie
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                cookie:
                  name: session-header
                  path: /
    - match:
        path: /v3/user
      name: cookie-based-session-persistence-route-exact
      route:
        cluster: regex-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.stateful_session:
          '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
          statefulSession:
            sessionState:
              name: envoy.http.stateful_session.cookie
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                cookie:
                  name: session-cookie
                  path: /
                  ttl: 3600s
